syntax = "proto3";

package api.admin.resource;

import "google/api/annotations.proto";
import "admin/model.proto";

option go_package = "github.com/aide-family/moon/api/admin/resource;resource";
option java_multiple_files = true;
option java_package = "api.admin.resource";

// 系统菜单管理模块
service Menu {
	// 获取菜单树
	rpc ListMenu (ListMenuRequest) returns (ListMenuReply) {
		option (google.api.http) = {
			get: "/v1/admin/menu/list"
		};
	}
}

message ListMenuRequest {}
message ListMenuReply {
	repeated Menu list = 1;
}